# sgx-edp

./: README.md
localattest/: Cargo.toml
localattest/src/: attestation.rs  main.rs
