[package]
name = "localattest"
version = "0.1.0"
authors = ["brian2 <brian.yap.sand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-isa = { version = "0.2", features = ["sgxstd"] }

# RustCrypto, used for CMAC
cmac = "0.2.0"
crypto-mac = "0.7.0"
aes = "0.3.2"
block-cipher-trait = "0.6.2"
generic-array = "0.12"
